# pyspark_prac

./: .gitignore  .pre-commit-config.yaml  Makefile  Pipfile  README.md  data_lake_notes.md  databricks_exam.md  delta_lake_sql.ipynb  generic_pyspark.ipynb  jacobs_notes.md  main.ipynb  main_2.ipynb  main_parquet.ipynb  main_parquet.py  prac.csv  prac2.csv  pyproject.toml  pytest.ini  spark_pandas_api.ipynb  spark_s3.ipynb  spark_sql_prac.ipynb  spark_walkthrough.ipynb
.github/workflows/: test.yml
delta/: main.py
docker/: Dockerfile  Dockerfile_multi_stage_zzz  Dockerfile_old  docker-compose-postgres.yml  docker-compose-test.yml  docker-compose.yml  docker_multi_stage_rip  install_packages.sh  postgres_bootstrap.sql
iceberg/: docker-compose.yml  final.py  iceberg_maintenance.py  iceburger_with_glue.py  local_iceburger.py  main.py
local_files/: delta_lake_s3.ipynb  delta_lake_sql.ipynb  delta_test.py  rest_api_scraping.py  spark_data_ops.py  spark_pandas_api.ipynb  spark_postgresql.ipynb  spark_postgresql.py  spark_s3.ipynb  spark_sql_prac.ipynb  utils.py
notebooks/: main_parquet.ipynb  spark_generic_tips.ipynb  spark_udfs.ipynb
src/: __init__.py  broadcast.py  data_ops_detailed.py  data_skew_praq.py  data_skew_praq_v2.py  nested_json_parsing.py  praq_v2.py  spark_data_ops.py  spark_etl_praq.py  spark_http_requests.py  spark_local_postgresql.py  spark_postgresql.py  test.py  utils.py
streaming/: apuntes.md  docker-compose.yml  kafka_to_cassandra.py  kafka_to_console.py
streaming/data_producer/: Dockerfile  main.py  requirements.txt
streaming/kafka_to_cassandra/: main.py
test/: conftest.py  test_pipeline.py
tests/: conftest.py
tests/unit/: combine_orders_test.py  setup_metadata_cols_test.py
trino/: apuntes.md  docker-compose.yml  queries.sql
