[tool.poetry]
name = "pyspark-prac"
version = "0.0.1"
description = "Pyspark Practice"
authors = ["jyablonski9 <jyablonski9@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyspark = ">=3.4.1"
boto3 = ">=1.28.53"
requests = ">=2.31.0"
delta-spark = ">=2.4.0"
pandas = "2.1.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"
pytest = "^7.4.2"
black = "^23.9.1"
notebook = "^7.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"