[project]
name = "pyspark-prac"
version = "0.0.1"
description = "Pyspark Practice"
authors = [{ name = "jyablonski9", email = "jyablonski9@gmail.com" }]
requires-python = ">=3.13, <3.14"
readme = "README.md"
dependencies = [
    "pyspark>=3.4.1",
    "boto3>=1.28.53",
    "requests>=2.31.0",
    "delta-spark>=2.4.0",
    "pandas>=2.1.0",
    "faker>=23.2.1,<24",
    "confluent-kafka>=2.3.0,<3",
]

[dependency-groups]
dev = ["ipykernel>=6.25.2", "pytest>=7.4.2", "black>=23.9.1", "notebook>=7.0.4"]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v -p no:warnings"
